Update homepage layout

--- a/index.html
+++ b/index.html
@@ -9,12 +9,24 @@
 </head>
 
 <body>
-  <h1>Odin Recipes</h1>
-  <ul>
-    <li><a href="recipes/lasagna.html">World's Best Lasagna</a></li>
-    <li><a href="recipes/omelette.html">Chef John's French Omelette</a></li>
-    <li><a href="recipes/chili.html">Simple Chili</a></li>
-  </ul>
+  <h1 class="centered">Odin Recipes</h1>
+  <div class="container">
+    <div class="card">
+      <img class="card-img" src="https://www.allrecipes.com/thmb/MkKfYU4oim55CLp39DDuNMuyThA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-armag-4x3-1-b24f9ad518d74090bf197828492c64a6.jpg">
+      <h4>World's Best Lasagna</h4>
+      <a href="recipes/lasagna.html">View Recipe</a>
+    </div>
+    <div class="card">
+      <img class="card-img"  src="https://www.allrecipes.com/thmb/FtUjsY5YgEVvq4TClUhWUh91Rjc=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/4507923-chef-johns-french-omelette-Chef-John-1x1-1-e3bc85e478324f42ad5a91cd0670cf77.jpg">
+      <h4>Chef John's French Omlette</h4>
+      <a href="recipes/omelette.html">View Recipe</a>
+    </div>
+    <div class="card">
+      <img class="card-img"  src="https://www.allrecipes.com/thmb/3o_eRiJcx13JMKOA0oKi6ZNLF1U=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/712107-simple-chili-Rock_lobster-fea3ce9d209744a7b6a0b2c0e6f24a40.jpg">
+      <h4>Simple Chili</h4>
+      <a href="recipes/chili.html">View Recipe</a>
+    </div>
+  </div>
 </body>
 
 </html>
